--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,4 +12,5 @@
     "files.eol": "\n",
     "editor.tabSize": 2,
     "editor.formatOnSave": true,
+    "typescript.tsdk": "./node_modules/typescript/lib"
 }
