--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,5 +37,10 @@
   ],
   "exclude": [
     "node_modules"
+  ],
+  "plugins": [
+    {
+      "name": "typescript-plugin-css-modules"
+    }
   ]
 }
