--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
-    "typescript-plugin-css-modules": "^3.2.0"
+    "typescript": "~3.9.3"
   }
 }
