--- a/.env.mock
+++ b/.env.mock
@@ -1,4 +1,4 @@
-VUE_APP_DEV=dev
+VUE_APP_DEV=mock
 VUE_APP_BASE_URL=/api
 # local地址，当 VUE_APP_DEV不是mock的时候填写
-VUE_APP_API_URL=127.0.0.1:8099
+VUE_APP_API_URL=
