--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.7.0",
     "echarts": "^4.9.0",
     "element-plus": "^1.0.1-beta.11",
+    "highlight.js": "^10.7.2",
+    "marked": "^2.0.3",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.1.6",
@@ -22,6 +24,8 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/highlight.js": "^10.1.0",
+    "@types/marked": "^2.0.2",
     "@types/mockjs": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
